Added base structure in the first part of the page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="logo"><h1>JAUNE</h1></div>
+    <div class="nav">
+        <a href="#">SERVICIOS</a>
+        <a href="#">GALERIA</a>
+        <a href="#">TURNOS</a>
+    </div>
+    <section>
+        <div>
+            <div class="slide-show">
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+            </div>
+            <div class="selector-slide">
+                <input type="radio" value="1">
+                <input type="radio" value="2">
+                <input type="radio" value="3">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
