--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <a href="#"><img src="img/logo.png" alt="logo"></a>
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#servicios">Servicios</a></li>
+                <li><a href="#galeria">Galeria</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+            </ul>
+        </nav>
+        <a href="#contact" class="cta"><button>Contact</button></a>
+    </header>
+    <section id="hero">
+        <div id="hero_text">
+            <h1>JAUNE</h1>
+            <h1>CUTS</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim malesuada egestas condimentum aliquet sapien, fusce. Suspendisse tempus auctor a netus neque fermentum vulputate viverra fusce. Leo ultricies mauris aliquet id. Ut sit nunc viverra quis consequat nibh magna.</p>
+        </div>
+        <div id="svg1"></div>
+    </section>
+    <section id="servicios"></section>
+    <section id="galeria"></section>
+    <section id="sobre"></section>
+    <section id="contact"></section>
 
+    <script src="script.js"></script>
 </body>
 </html>
