Added service section, change font, added new color

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <a href="#"><img src="img/logo.png" alt="logo"></a>
         <nav>
             <ul class="nav_links">
-                <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#galeria">Galeria</a></li>
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#service">Servicios</a></li>
+                <li><a href="#galery">Galeria</a></li>
+                <li><a href="#about">Sobre</a></li>
             </ul>
         </nav>
         <a href="#contact" class="cta"><button>Contact</button></a>
     </header>
+
+
     <section id="hero">
         <div id="hero_text">
             <h1>JAUNE</h1>
@@ -27,9 +29,27 @@
         </div>
         <div id="svg1"></div>
     </section>
-    <section id="servicios"></section>
-    <section id="galeria"></section>
-    <section id="sobre"></section>
+
+
+    <section id="service">
+        <div class="service_card">
+            <img src="img/test.png" alt="Service tipes and information">
+            <h2>Semipermanentes</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisi eget libero sollicitudin dignissim nisl turpis congue.</p>
+            <div class="card_price_box">
+                <p>PRICE</p>
+            </div>
+                <button>Seleccionar</button>
+        </div>
+
+
+        <div class="service_card"><img src="img/test.png" alt="Service tipes and information"><p>PARAGRAPH</p><div class="card_price_box"><p>PRICE</p></div><button>Seleccionar</button></div>
+        <div class="service_card"><img src="img/test.png" alt="Service tipes and information"><p>PARAGRAPH</p><div class="card_price_box"><p>PRICE</p></div><button>Seleccionar</button></div>
+    </section>
+
+    
+    <section id="galery"></section>
+    <section id="about"></section>
     <section id="contact"></section>
 
     <script src="script.js"></script>
