changed some css in the service section

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 
     <section id="service">
         <div class="service_card">
-            <img src="img/test.png" alt="Service tipes and information">
-            <div class="service_title">
-                <span style="visibility: hidden;">.</span><br> 
+            <div class="service_img service_img_1"></div>
+            <div class="service_title service_semis">
                 <span>Semipermanentes</span>
             </div>
             <div class="service_description">
@@ -48,7 +47,7 @@
         </div>
 
         <div class="service_card">
-            <img src="img/test.png" alt="Service tipes and information">
+            <div class="service_img service_img_2"></div>
             <div class="service_title">
                 <span>Acrilicas en</span><br> 
                 <span>Polygel</span>
@@ -63,13 +62,13 @@
         </div>
         
         <div class="service_card">
-            <img src="img/test.png" alt="Service tipes and information">
+            <div class="service_img service_img_3"></div>
             <div class="service_title">
                 <span>Kapping en</span><br> 
                 <span>Gel y Polygel</span>
             </div>
             <div class="service_description">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae, sed magnis velit et eu molestie in. Sapien, quis amet tincidunt tellus at donec urna. A vulputate leo quis senectus bibendum. Ante pharetra, aliquet velit bibendum ultrices.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae, sed magnis velit et eu molestie in. Sapien, quis amet tincidunt tellus at donec urna. A vulputate leo quis senectus bibendum.</p>
             </div>
             <div class="card_price_box">
                 <h2><span>$900</span></h2>
