--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <nav id="primary_navigation">
             <ul class="nav_links" data-visible="false">
+                <li><a href="#">Inicio</a></li>
                 <li><a href="#service">Servicios</a></li>
                 <li><a href="#galery">Galeria</a></li>
-                <li><a href="#about">Sobre</a></li>
                 <li><a href="#contact">Contacto</a></li>
             </ul>
         </nav>
@@ -25,9 +25,12 @@
 
 
     <section id="hero">
-        <div id="hero_text">
+        <div>
             <h1>JAUNE</h1>
             <h1>CUTS</h1>
+            <!-- <h1>THIS IS A WORK</h1>
+            <h1>IN PROCESS</h1>
+            <h1>Last Update: 10/3/22</h1> -->
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim malesuada egestas condimentum aliquet sapien, fusce. Suspendisse tempus auctor a netus neque fermentum vulputate viverra fusce. Leo ultricies mauris aliquet id. Ut sit nunc viverra quis consequat nibh magna.</p>
         </div>
         <div id="svg1"></div>
@@ -105,7 +108,7 @@
 
 
 
-    <section id="about"></section>
+
     <section id="contact"></section>
 
     <script src="script.js"></script>
