Changed some Css in services and galery sections

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <section id="hero" class="hero">
         <div class="main-presentation">
-            <!-- <h1 class="title">JAUNE</h1> -->
-            <!-- <h1 class="title">CUTS</h1> -->
-            <h1 class="title">THIS IS A WORK</h1>
-            <h1 class="title">IN PROCESS</h1>
-            <h1 class="title">Last Update: 12/3/22</h1>
+            <h1 class="title">JAUNE</h1>
+            <h1 class="title">CUTS</h1>
+            <!-- <h1 class="title">THIS IS A WORK</h1> -->
+            <!-- <h1 class="title">IN PROCESS</h1> -->
+            <!-- <h1 class="title">Last Update: 12/3/22</h1> -->
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim malesuada egestas condimentum aliquet sapien, fusce. Suspendisse tempus auctor a netus neque fermentum vulputate viverra fusce. Leo ultricies mauris aliquet id. Ut sit nunc viverra quis consequat nibh magna.</p>
         </div>
         <div id="svg1"></div>
@@ -61,7 +61,8 @@
             <div class="service-card">
                 <div class="service-img service-img-2"></div>
                 <div class="service-title">
-                    <span>Semipermanentes</span>
+                    <span>Acrilicas en</span>
+                    <span>Polygel</span>
                 </div>
                 <div class="service-description">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisi eget libero sollicitudin dignissim nisl turpis congue.</p>
@@ -77,7 +78,8 @@
             <div class="service-card">
                 <div class="service-img service-img-3"></div>
                 <div class="service-title">
-                    <span>Semipermanentes</span>
+                    <span>Kapping en</span>
+                    <span>Gel y Polygel</span>
                 </div>
                 <div class="service-description">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisi eget libero sollicitudin dignissim nisl turpis congue.</p>
@@ -95,19 +97,40 @@
     
     <section id="galery" class="column">
         <div id="svg2"></div>
-        <h1 class="title">Ultimas Fotos</h1>
-        <div class="galery-box">
-            <div class="instagram-insert"></div>
-            <div class="instagram-insert instagram-hide"></div>
-            <div class="instagram-insert"></div>
-            <div class="instagram-insert"></div>
-            <div class="instagram-insert"></div>
+        <h1 class="title galery-title">Ultimas Fotos</h1>
+        <div class="galery-box column">
+            <div class="galery-row space-around">
+                <div class="instagram-insert"></div>
+                <div class="instagram-insert instagram-hide"></div>
+                <div class="instagram-insert"></div>
+            </div>
+            <div class="galery-row space-around">
+                <div class="instagram-insert"></div>
+                <div class="instagram-insert"></div>
+            </div>
         </div>
     </section>
 
 
-    <section id="contact" class="center">
-        <h1>CONTACTO</h1>
+    <section id="contact" class="space-around">
+        <div class="contact-text">
+            <h1>CONTACTO</h1>
+        </div>
+        <form action="" class="column">
+            <input type="text" placeholder="Nombre">
+            <select name="Tipo de uñas" id="">
+                <option value="Semipermanentes">Semipermanentes</option>
+                <option value="Acrilicas en Polygel">Acrilicas en Polygel</option>
+                <option value="Kapping en Gel y Polygel">Kapping en Gel y Polygel</option>
+            </select>
+            <label for="check-design">Quiero elegir mi diseño</label>
+            <input type="checkbox" id="check-design">
+        </form>
+
+
+
+
+
     </section>
 
 
