--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Jaunce Cuts</title>
+    <link rel="icon" href="favicon.png">
 </head>
 <body class="flex column">
     <header> 
@@ -28,9 +29,6 @@
         <div class="main-presentation">
             <h1 class="title">JAUNE</h1>
             <h1 class="title">CUTS</h1>
-            <!-- <h1 class="title">THIS IS A WORK</h1> -->
-            <!-- <h1 class="title">IN PROCESS</h1> -->
-            <!-- <h1 class="title">Last Update: 12/3/22</h1> -->
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim malesuada egestas condimentum aliquet sapien, fusce. Suspendisse tempus auctor a netus neque fermentum vulputate viverra fusce. Leo ultricies mauris aliquet id. Ut sit nunc viverra quis consequat nibh magna.</p>
         </div>
         <div id="svg1"></div>
@@ -68,7 +66,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisi eget libero sollicitudin dignissim nisl turpis congue.</p>
                 </div>
                 <div class="card-price-box">
-                    <h2><span>$600</span></h2>
+                    <h2><span>$750</span></h2>
                 </div>
                     <button class="btn">Seleccionar</button>
             </div>
@@ -85,7 +83,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisi eget libero sollicitudin dignissim nisl turpis congue.</p>
                 </div>
                 <div class="card-price-box">
-                    <h2><span>$600</span></h2>
+                    <h2><span>$900</span></h2>
                 </div>
                     <button class="btn">Seleccionar</button>
             </div>
@@ -112,19 +110,36 @@
     </section>
 
 
-    <section id="contact" class="space-around">
-        <div class="contact-text">
-            <h1>CONTACTO</h1>
-        </div>
-        <form action="" class="column">
-            <input type="text" placeholder="Nombre">
-            <select name="Tipo de uñas" id="">
-                <option value="Semipermanentes">Semipermanentes</option>
-                <option value="Acrilicas en Polygel">Acrilicas en Polygel</option>
-                <option value="Kapping en Gel y Polygel">Kapping en Gel y Polygel</option>
+    <section id="contact" class="column center">
+        <h1 class="title">CONTACTO</h1>
+        <form onsubmit="wspMsje()" class="column center contact-form">
+            <label for="name">Hola, mi nombre es</label>
+            <input required type="text" placeholder="Nombre" id="nails-name">
+            <label for="nails-tipe">me quiero hacer unas</label>
+            <select required name="nails-service" id="nails-service">
+                <option value="" hidden selected>Seleccionar servicio</option>
+                <option value="unas uñas semipermanentes">Semipermanentes</option>
+                <option value="unas acrilicas en Polygel">Acrilicas en Polygel</option>
+                <option value="un kapping en Gel y Polygel">Kapping en Gel y Polygel</option>
             </select>
-            <label for="check-design">Quiero elegir mi diseño</label>
-            <input type="checkbox" id="check-design">
+            <label for="date">Me gustaría hacerlo el día</label>
+            <input required type="date" id="nails-date" name="nails-date">
+            <label for="nails-time">a las</label>
+            <select required name="nails-time" id="nails-time" default="Seleccionar hora">
+                <option value="" hidden selected>Seleccionar hora</option>
+                <option value="9hs">9 hs</option>
+                <option value="10hs">10 hs</option>
+                <option value="11hs">11 hs</option>
+                <option value="12hs">12 hs</option>
+                <option value="13hs">13 hs</option>
+                <option value="14hs">14 hs</option>
+                <option value="15hs">15 hs</option>
+                <option value="16hs">16 hs</option>
+                <option value="17hs">17 hs</option>
+                <option value="18hs">18 hs</option>
+                <option value="19hs">19 hs</option>
+            </select>
+            <button class="btn" type="submit" value="Submit">Confirmar turno</button>
         </form>
 
 
