--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="card-price-box">
                     <h2><span>$600</span></h2>
                 </div>
-                    <a href="#contact"><button class="btn" onclick= "selectService('unas uñas semipermanentes')">Seleccionar</button></a>
+                    <a href="contact.html"><button class="btn" onclick= "selectService('unas uñas semipermanentes')">Seleccionar</button></a>
             </div>
 
 
@@ -68,7 +68,7 @@
                 <div class="card-price-box">
                     <h2><span>$750</span></h2>
                 </div>
-                <a href="#contact"><button class="btn" onclick="selectService('unas acrilicas en Polygel')">Seleccionar</button></a>
+                <a href="contact.html"><button class="btn" onclick="selectService('unas acrilicas en Polygel')">Seleccionar</button></a>
             </div>
 
 
@@ -85,7 +85,7 @@
                 <div class="card-price-box">
                     <h2><span>$900</span></h2>
                 </div>
-                    <a href="#contact"><button class="btn" onclick="selectService('un kapping en Gel y Polygel')">Seleccionar</button></a>
+                    <a href="contact.html"><button class="btn" onclick="selectService('un kapping en Gel y Polygel')">Seleccionar</button></a>
             </div>
 
 
