Added temporary images and changed how the link is opened in the form

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
         <h1 class="title galery-title">Ultimas Fotos</h1>
         <div class="galery-box column">
             <div class="galery-row space-around">
-                <div class="instagram-insert"></div>
+                <div class="instagram-insert ig-1"></div>
                 <div class="instagram-insert instagram-hide"></div>
-                <div class="instagram-insert"></div>
+                <div class="instagram-insert ig-2"></div>
             </div>
             <div class="galery-row space-around">
-                <div class="instagram-insert"></div>
-                <div class="instagram-insert"></div>
+                <div class="instagram-insert ig-3"></div>
+                <div class="instagram-insert ig-4"></div>
             </div>
         </div>
     </section>
